--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,11 @@ img {
 
 }
 
+button {
+  border: none;
+  outline: none;
+}
+
 .strona {
   width: 1200px;
   margin-left: auto;
@@ -187,6 +192,17 @@ padding-left:15px
   padding: 6px 22px;
 }
 
+.przycisk:hover,
+.przycisk:focus {
+  color: white;
+  background: var(--kolor-logo);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+
+}
+
 .przycisk-usluga {
   font-family: 'Roboto';
   font-style: normal;
@@ -208,24 +224,6 @@ padding-left:15px
   background: var(--kolor-logo);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
-}
-
-.przycisk:hover {
-  border-color: var(--kolor-logo);
-  border-width: 1px;
-}
-
-.przycisk-aktywny {
-  color: white;
-  background: var(--kolor-logo);
-  border-width: 1px;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.przycisk-aktywny :hover {
-  border-color: var(--kolor-logo);
-  border-width: 1px;
 }
 
 .tabela-obrazkow {
