--- a/css/styles.css
+++ b/css/styles.css
@@ -38,12 +38,27 @@ h1 {
 
 img {
   display: block;
-
 }
 
 button {
   border: none;
   outline: none;
+}
+
+a,
+button {
+  cursor: pointer;
+}
+
+footer {
+  background-color: var(--kolor-stopka);
+  color: white;
+  padding: 60px 0px;
+}
+.container {
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .strona {
@@ -65,7 +80,7 @@ button {
   font-size: 36px;
   line-height: 42px;
   text-align: center;
-  letter-spacing: 0.03em;  
+  letter-spacing: 0.03em;
   color: #212121;
   text-align: center;
   padding-bottom: 50px;
@@ -80,16 +95,14 @@ button {
 }
 
 .stopka {
-  background-color: var(--kolor-stopka);
-  color: white;
-  padding: 60px 15px;
+  padding: 0px 15px;
 }
 
 .ogloszenie {
   text-align: center;
   background-color: var(--kolor-stopka);
   padding-top: 200px;
-  padding-bottom: 280px;
+  padding-bottom: 200px;
 }
 
 .odstep {
@@ -108,7 +121,7 @@ button {
 }
 
 .logo-margines-lewy {
-padding-left:15px
+  padding-left: 15px;
 }
 
 .logo .logo-stopka-gora {
@@ -165,20 +178,19 @@ padding-left:15px
   font-weight: 400;
 }
 
-.kontakt:hover,
-.kontakt:focus {
+.naglowek a:hover,
+.naglowek a:focus {
   color: var(--kolor-logo);
 }
 
 .wiersz-przyciskow {
   padding-bottom: 50px;
-  display: flex; 
+  display: flex;
   gap: 8px;
   justify-content: center;
-  }
+}
 
 .przycisk {
-  
   height: 38px;
   font-family: "Roboto";
   font-style: normal;
@@ -198,12 +210,13 @@ padding-left:15px
 .przycisk:focus {
   color: white;
   background: var(--kolor-logo);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
 .przycisk-usluga {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -219,21 +232,27 @@ padding-left:15px
   margin-left: auto;
   margin-right: auto;
   letter-spacing: 0.06em;
-  color: #FFFFFF;
+  color: #ffffff;
   background: var(--kolor-logo);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
+  border-radius: 4px;
 }
 
 .tabela-obrazkow {
-  /* border-spacing: 30px; */
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+
+  /* border-spacing: 30px;
   border-collapse: separate;
+gap: 30px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;  */
 }
 
 .wiersz-obrazow {
   display: flex;
+  margin: 0;
   justify-content: center;
   gap: 30px;
 }
@@ -249,7 +268,9 @@ border-radius: 4px;
 }
 
 .wiersz-obrazow figure {
-  border: 1px solid green;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
   /* var(--kolor-ramki-zdjec); */
 }
 
@@ -279,23 +300,49 @@ border-radius: 4px;
   color: #757575;
 }
 
-.obraz-zespol-tytul {
-font-weight: 400;
-font-size: 16px;
-line-height: 19px;
-text-align: center;
-letter-spacing: 0.03em;
-color: #757575
-margin-top: 10px;
-pmargin-bottom: 30px;
+.obraz-zespol-imie {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-top: 30px;
 }
 
-.obraz-zespol-imie {
-font-weight: 500;
-font-size: 16px;
-line-height: 19px;
-text-align: center;
-letter-spacing: 0.03em;
-color: #212121;
-margin-top: 30px;
+.obraz-zespol-tytul {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.tabela-ipsum {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.tabela-ipsum p:first-child {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--kolor-domyslny);
+  margin-bottom: 10px;
+}
+
+.tabela-ipsum p:last-child {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--kolor-kontakt);
 }
